--- a/client/public/index.html
+++ b/client/public/index.html
@@ -16,6 +16,7 @@
     crossorigin="anonymous">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/fontawesome.css" integrity="sha384-ozJwkrqb90Oa3ZNb+yKFW2lToAWYdTiF1vt8JiH5ptTGHTGcN7qdoR1F95e0kYyG"
     crossorigin="anonymous">
+  <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed|Roboto:700" rel="stylesheet">
   <title>🕵️‍FNN🕵️️</title>
 </head>
 
